# MHDSolver

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  LinearisedAdvection.cpp  NavierStokesAdvection.cpp  NavierStokesAdvection.h  WeakMHDSolver.cpp
.gitlab-ci/: build-and-test.sh
AdvectionTerms/: AdjointAdvection.cpp  LinearisedAdvection.h  NonlinearDisturbanceAdvection.cpp  NonlinearDisturbanceAdvection.h
EquationSystems/: Extrapolate.cpp  Extrapolate.h  IncNavierStokes.cpp  IncNavierStokes.h  StandardExtrapolate.cpp  StandardExtrapolate.h  VelocityCorrectionScheme.cpp  VelocityCorrectionScheme.h
Examples/HartmannFlow/: Flow.xml  run.sh
SolverUtils/: Driver.cpp  Driver.h  SolverUtils.hpp  WMHDDriverArnoldi.cpp  WMHDDriverArnoldi.h  WMHDDriverArpack.cpp  WMHDDriverArpack.h  WMHDDriverModifiedArnoldi.cpp  WMHDDriverModifiedArnoldi.h
cmake/: NektarCommon.cmake
solvers/ADRSolver/EquationSystems/: MMFAdvection.cpp
solvers/IncNavierStokesSolver/: CMakeLists.txt
solvers/IncNavierStokesSolver/EquationSystems/: IncNavierStokes.cpp  IncNavierStokes.h  VelocityCorrectionScheme.cpp  VelocityCorrectionScheme.h
solvers/IncNavierStokesSolver/Forcing/: ForcingMagnetic.cpp  ForcingMagnetic.h
templates/executable/: CMakeLists.txt
templates/executable/EquationSystems/: Laplace.cpp
utilities/FieldConvert/: CMakeLists.txt
